# sensors-control-gpio

./: README.md  __init__.py  build_and_install_locally.sh  build_and_upload.sh  pyproject.toml
AHT20_sensor_control/: AHT20_sensor_parameters.py  AHT20_sensor_wrapper.py  I2C_wrapper.py  __init__.py  __main__.py  crc8_helper.py  helper_function.py
DHT11_sensor_control/: DHT11_wrapper.py  __init__.py  __main__.py  helper_function.py
example/: minimal_AHT20.py
serial_monitor/: __main__.py  helper_function.py
